<resources>
    <string name="app_name">Avanza</string>
    <string name="dashboard_greeting">Good morning, \n%s$s.</string>
    <string name="progress_percentage">%1$d%%</string>
    <string name="habits_completed">%1$d of %2$d done</string>
    <string name="habits_remaining">%1$d remaining</string>
    <string name="weekly_habits">This week</string>
    <string name="your_stats">Your Stats</string>
    <string name="best_streak">BEST STREAK</string>
    <string name="days_in_a_row">days in a row</string>
    <string name="this_week">THIS WEEK</string>
    <string name="completion_rate">completion rate</string>
    <string name="total_habits">TOTAL HABITS</string>
    <string name="being_tracked">being tracked</string>
    <string name="completed">COMPLETED</string>
    <string name="check_ins_this_week">check-ins this week</string>
    <string name="weekly_completion">WEEKLY COMPLETION</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="j">J</string>
    <string name="notifications">Notifications</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="daily_reminders">Daily Reminders</string>
    <string name="_12_00pm">12:00pm</string>
    <string name="mon_fri">Mon-Fri</string>
    <string name="weekdays">Weekdays</string>
    <string name="frequency">Frequency</string>
    <string name="new_habit">New habit</string>
    <string name="every_day">Every day</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="once_a_week">Once a week</string>
    <string name="weekends">Weekends</string>
    <string name="add_habit">Add habit</string>
    <string name="habit_name">Habit Name</string>
    <string name="e_g_journal_daily">e.g. Journal Daily</string>
    <string name="what_does_this_habit_involve">What does this habit involve?</string>
    <string name="habit_description">Habit Description</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="good_morning_user">Good morning,\n%1$s.</string>

</resources>