<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/dashboardScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!--YOUR STATS TEXT-->
            <LinearLayout
                android:id="@+id/statisticsContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="28dp"
                android:paddingTop="24dp"
                android:paddingEnd="28dp"
                android:paddingBottom="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/txtMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/your_stats"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- BEST STREAK CARD -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bestStreakCard"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/statisticsContent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/bestStreakText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/best_streak"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/bestStreakNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="12"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/bestStreakLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days_in_a_row"
                        android:textSize="15sp"
                        android:textColor="#666666"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!--Completion Rate Card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/completionRateCard"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="215dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/statisticsContent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/completionRateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/this_week"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/completionRatePercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="93%"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/completionRateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completion_rate"
                        android:textSize="15sp"
                        android:textColor="#666666"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!--Total Habits Card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/totalHabitsCard"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="134dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/statisticsContent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/totalHabitsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_habits"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/totalHabits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="4"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/totalHabitsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/being_tracked"
                        android:textSize="15sp"
                        android:textColor="#666666"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!--Completed Card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/completedCard"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="215dp"
                android:layout_marginTop="134dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/statisticsContent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/completedTasks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/completedHabits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="19"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/completedLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_ins_this_week"
                        android:textSize="13sp"
                        android:textColor="#666666"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <!--WEEKLY COMPLETION Card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/weeklyCompletionCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/totalHabitsCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/weeklyProgressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly_completion"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/weeklyProgressRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/item_weekly_progress" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!--Bottom Navigation Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomNavCard"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="18dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/bottom_nav_colors"
            app:itemTextColor="@color/bottom_nav_colors"
            app:itemTextAppearanceActive="@style/BottomNavText"
            app:itemTextAppearanceInactive="@style/BottomNavText"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>